- Fix: ignore 'schema' when not a sequence (Frank Sachsenheim).
- Change: 'type' can also be a list of types (Frank Sachsenheim).
- Improve 'allow_unknown' documentation (Frank Sachsenheim).
- Fix: allow_unknown can also be set for nested dicts. Closes #75 (Tobias
  Betz).
- Fix: raise SchemaError when an unallowed 'type' is used in conjunction with
  'schema' rule (Tobias Betz).

Version 0.8.1
-------------

Released on Mar 16 2015.

- Fix: dependency on a sub-document field does not work. Closes #64.
- Fix: readonly validation should happen before any other validation.
  Closes #63.
- Fix: allow_unknown does not apply to sub-dictionaries in a list. Closes #67.
- Fix: two tests being ignored because of name typo.
- Fix: update mode does not ignore required fields in subdocuments. Closes #72.
- Fix: allow_unknown does not respect custom rules. Closes #66.
- Fix typo in docstrings (Riccardo).

Version 0.8
-----------

Released on Jan 7 2015.

- 'dependencies' also supports dependency values.
- 'allow_unknown' can also be set to a validation schema, in which case unknown
  fields will be validated against it. Closes nicolaiarocci/eve#405.
- New function-based custom validation mode (Luo Peng).
- Fields with empty definitions in schema were reported as non-existent. Now
  they are considered as valid, whatever their value is (Jaroslav Semančík).
- If dependencies are precised for a 'required' field, then the presence of the
  field is only validated if all dependencies are present (Trong Hieu HA).
- Documentation typo (Nikita Vlaznev #55).
- [CI] Add travis_retry to pip install in case of network issues (Helgi Þormar
  Þorbjörnsson #49)

Version 0.7.2
-------------

Released on Jun 19 2014.

- Successfully validate int as float type (Florian Rathgeber).

Version 0.7.1
-------------

Released on Jun 17 2014.

- Validation schemas are now validated up-front. When you pass a Schema to the
  Validator it will be validated against the supported ruleset (Paul Weaver).