@@ -285,6 +285,12 @@ validated. ::
     >>> v.document
     {'flag': True}
 
+There's a wrapper-method ``validated`` that returns the validated document for
+flows like this: ::
+
+    v = Validator(schema)
+    valid_documents = [x for x in [v.validated(y) for y in documents] if x is not None]
+
 If a coercion callable raises a ``TypeError`` or ``ValueError`` then the
 exception will be caught and the validation with fail.  All other exception pass
 through.
